--- a/spbra-backend/package.json
+++ b/spbra-backend/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "spbra-payment-backend",
+  "name": "spbra-backend",
   "version": "1.0.0",
-  "description": "SPBRA Payment System Backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.8.1",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "18.x"
